Make pre-2.0 ELF binaries (with gcc-2.95.3/binutils-2.11.2) actually work with options COMPAT_16. Tested on R3000 pmax and R5000 sgimips, closes PR port-mips/44375.